# chop-conventions

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATION.md  README.md  chop-logs.md  install-tools.py  justfile  justfile.md  marketplace.md  pyrightconfig.json
.claude/: settings.local.json
claude-md/: dev-machine.md  global.md
copied_prompts/: CLAUDE.jesse.md  ui-redesign-worldclass.md
deployment/: surge.md
dev-inner-loop/: a_readme_first.md  before-implementing.md  bug-investigation.md  clean-code.md  clean-commits.md  github-action-claude-code-action-gotcha.md  guardrails.md  pr-rewrite.md  pr-workflow.md  repo-modes.md  retros.md  running-commands.md  workflow-recommendations.md
dev-setup/: bd-close-gated  beads-claude-code.md  beads.md  claude-code-statusline.md  claude-safety-hooks.md  experimental-tools.md  githooks.md  gitignore.md  justfile.md  statusline-command.sh  tailscale-dev-server.md  test_bd_close_gated.sh
githooks/: post-checkout  post-merge
pwa/: SETTINGS_SPEC.md  repos.md  (+1 more)
skills/bulk/: SKILL.md  pyproject.toml
skills/bulk/chop_bulk/: __init__.py  bd_show.py  common.py  file_read.py  gh_pr_details.py  gh_prs_open.py  up_to_date.py
skills/bulk/tests/: conftest.py  test_bd_show.py  test_common.py  test_gh_pr_details.py
skills/gen-tts/: SKILL.md  gemini-tts.sh  generate-tts.py  pyproject.toml  tts-voice.txt
skills/gen-tts/chop_gen_tts/: __init__.py  cli.py
skills/gen-tts/voices/: freud.txt  soprano.txt
skills/harden-telegram/: SKILL.md  design.md  pyproject.toml
skills/harden-telegram/chop_telegram_tools/: __init__.py  telegram_debug.py  watchdog.py
skills/harden-telegram/server/: package.json  server.ts  server.ts.pre-split  telegram_bot.py  tsconfig.json
skills/harden-telegram/server/hooks/: log-telegram-inbound.py  log-telegram.py
skills/harden-telegram/server/tests/: test_assert_sendable.ts  test_telegram_bot.py  test_two_process_killtest.py  test_watchdog.py
skills/harden-telegram/tools/: telegram_debug.py  test_telegram_debug.py  test_watchdog.py  watchdog.py
skills/up-to-date/: SKILL.md  conftest.py  diagnose.py  hook_trust.py  pyproject.toml  test_diagnose.py  test_hook_trust.py
skills/up-to-date/chop_up_to_date/: __init__.py  diagnose.py  hook_trust.py
(+77 files in other folders)
